# app/Http/Controllers/API/ServiceAPIController.php
@@ -1,0 +1,258 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Requests\API\CreateServiceAPIRequest;
+use App\Http\Requests\API\UpdateServiceAPIRequest;
+use App\Models\Service;
+use App\Repositories\ServiceRepository;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use App\Http\Controllers\AppBaseController;
+
+/**
+ * Class ServiceController
+ */
+
+class ServiceAPIController extends AppBaseController
+{
+    private ServiceRepository $serviceRepository;
+
+    public function __construct(ServiceRepository $serviceRepo)
+    {
+        $this->serviceRepository = $serviceRepo;
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/services",
+     *      summary="getServiceList",
+     *      tags={"Service"},
+     *      description="Get all Services",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(ref="#/components/schemas/Service")
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function index(Request $request): JsonResponse
+    {
+        $services = $this->serviceRepository->all(
+            $request->except(['skip', 'limit']),
+            $request->get('skip'),
+            $request->get('limit')
+        );
+
+        return $this->sendResponse($services->toArray(), 'Services retrieved successfully');
+    }
+
+    /**
+     * @OA\Post(
+     *      path="/services",
+     *      summary="createService",
+     *      tags={"Service"},
+     *      description="Create Service",
+     *      @OA\RequestBody(
+     *        required=true,
+     *        @OA\JsonContent(ref="#/components/schemas/Service")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Service"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function store(CreateServiceAPIRequest $request): JsonResponse
+    {
+        $input = $request->all();
+
+        $service = $this->serviceRepository->create($input);
+
+        return $this->sendResponse($service->toArray(), 'Service saved successfully');
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/services/{id}",
+     *      summary="getServiceItem",
+     *      tags={"Service"},
+     *      description="Get Service",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Service",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Service"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function show($id): JsonResponse
+    {
+        /** @var Service $service */
+        $service = $this->serviceRepository->find($id);
+
+        if (empty($service)) {
+            return $this->sendError('Service not found');
+        }
+
+        return $this->sendResponse($service->toArray(), 'Service retrieved successfully');
+    }
+
+    /**
+     * @OA\Put(
+     *      path="/services/{id}",
+     *      summary="updateService",
+     *      tags={"Service"},
+     *      description="Update Service",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Service",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\RequestBody(
+     *        required=true,
+     *        @OA\JsonContent(ref="#/components/schemas/Service")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Service"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function update($id, UpdateServiceAPIRequest $request): JsonResponse
+    {
+        $input = $request->all();
+
+        /** @var Service $service */
+        $service = $this->serviceRepository->find($id);
+
+        if (empty($service)) {
+            return $this->sendError('Service not found');
+        }
+
+        $service = $this->serviceRepository->update($input, $id);
+
+        return $this->sendResponse($service->toArray(), 'Service updated successfully');
+    }
+
+    /**
+     * @OA\Delete(
+     *      path="/services/{id}",
+     *      summary="deleteService",
+     *      tags={"Service"},
+     *      description="Delete Service",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Service",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function destroy($id): JsonResponse
+    {
+        /** @var Service $service */
+        $service = $this->serviceRepository->find($id);
+
+        if (empty($service)) {
+            return $this->sendError('Service not found');
+        }
+
+        $service->delete();
+
+        return $this->sendSuccess('Service deleted successfully');
+    }
+}
